# allocation-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  model.py  orm.py  pyproject.toml  repository.py  test_allocate.py  test_batches.py  test_orm.py  test_repository.py
src/: main.py
src/allocation/adapters/: email.py  orm.py  unit_of_work.py
src/allocation/domain/: service.py
src/allocation/domain/model/: __init__.py  aggregate.py  dto.py  events.py
src/allocation/domain/service/: handlers.py  messagebus.py  services.py  unit_of_work.py
src/allocation/lib/: base_types.py  config.py  settings.py
src/allocation/repositories/: __init__.py  abstract.py  sqlalchemy_repository.py
src/allocation/routers/: commons.py  entrypoints.py
tests/: conftest.py  random_refs.py  test_batches.py  test_orm.py
tests/src/allocation/adapters/: test_unit_of_work.py
tests/src/allocation/domain/: test_allocate.py  test_batches.py  test_handlers.py  test_product.py  test_service.py
tests/src/allocation/repositories/: test_repository.py
tests/src/allocation/routers/: test_entrypoints.py
