[tool.poetry]
name = "Allocation API"
version = "0.1.0"
description = "Example application code based on the cosmic python book"
authors = ["ChaacXib <chaacxib.hi@ud.me>"]
license = "CC0 1.0 Universal"
readme = "README.md"
packages = [{include = "allocation_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.6"
sqlalchemy = "^2.0.7"
pydash = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.256"
black = "^23.1.0"
isort = "^5.12.0"
pyright = "^1.1.299"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 85

[tool.black]
line-length = 85

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
reportMissingSuperCall = true
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 85
